<resources>
    <string name="app_name">Remindy</string>
    <string name="Greeting1">Hello</string>
    <string name="Greeting2">Good Evening</string>
    <string name="B1">Water Riminder</string>
    <string name="B2">Medicine Reminder</string>
    <string name="B3">Clinic And Report Reminder </string>
    <string name="B4">Expiry Date Reminder</string>
    <string name="B5">Meal Reminder</string>
    <string name="LogoDescription">Logo</string>


    <!--    Water Reminder-->
    <string name="dash">/</string>
    <string name="DailyTarget">1000</string>
    <string name="CompletedAmount">500</string>
    <string name="DrinkButton">Drink Now</string>
    <string name="DrinkTragetText">Drink Target</string>
    <string name="DrinkAddReminder">Add Reminder</string>
    <!--  New  Water Reminder Add-->
    <string name="WaterAmount">Drink volume</string>
    <string name="Time">Time</string>
    <string name="Date">Date</string>
    <string name="NewWaterRemindAdd">Add Reminder</string>
    <string name="NewWaterRemindTimeSelect">Select time</string>
    <string name="NewWaterRemindDateSelect">Select Date</string>
    <string name="Back">Back</string>
    <string name="Add">Add</string>
    <string name="Select">Select</string>

    <!--    Clinic Reminder-->
    <string name="activityname">Clinic and Report Reminder</string>
    <string name="Description">Description</string>
    <string name="HospitalName">Hospital Name</string>
    <string name="DoctorName">Doctor Name</string>
    <string name="cancel">Cancel</string>
    <string name="time">Time</string>
    <string name="ex_fever">Ex: Fever</string>
    <string name="ex_dr_ravi">Ex: Dr.Ravi</string>
    <string name="add">Add</string>
    <string name="ex_lanka_hospital">Ex: Lanka Hospital</string>
    <string name="select_time">Select Time</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="venue">Venue</string>
    <string name="todo">TODO</string>

    <!--    meal Remider-->
    <string name="Day">Every Day</string>
    <string name="meal_type">Meal Type</string>
    <string name="select">Select</string>
    <string name="submit">Submit</string>
    <string name="Cancle">Cancle</string>


    <!--    Clinic Reminder-->
    <string name="ExSoon">Expiring Soon</string>
    <string name="MED1">Medicine 01</string>
    <string name="MED2">Medicine 02</string>
    <string name="MED3">Medicine 03</string>
    <string name="dummyVal">dummy</string>

    <!--    Clinic Reminder-->
    <string name="medicineReminder">Medicine Reminder</string>
    <string name="medicineType">Medicine Type</string>
    <string name="medicineName">Medicine Name</string>
    <string name="dose">Dose</string>


</resources>