<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#262F5A"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="@color/Button_back"
        android:text="@string/B1"
        android:textAlignment="center"
        android:textColor="@color/Button_txt"
        android:textSize="18sp"
        app:cornerRadius="30dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.308" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="90dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/button3"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="@color/Button_back"
        android:text="@string/B3"
        android:textColor="@color/Button_txt"
        app:cornerRadius="30dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.583" />

    <Button
        android:id="@+id/button5"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="@color/Button_back"
        android:text="@string/B5"
        android:textColor="@color/Button_txt"
        app:cornerRadius="30dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.931" />

    <Button
        android:id="@+id/button4"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="@color/Button_back"
        android:text="@string/B4"
        android:textColor="@color/Button_txt"
        app:cornerRadius="30dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.758" />

    <Button
        android:id="@+id/button2"
        android:layout_width="325dp"
        android:layout_height="72dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="62dp"
        android:backgroundTint="@color/Button_back"
        android:text="@string/B2"
        android:textColor="@color/Button_txt"
        android:textSize="18sp"
        app:cornerRadius="30dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="92dp"
        android:layout_height="39dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="358dp"
        android:layout_marginBottom="7dp"
        android:text="@string/Greeting1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="261dp"
        android:text="@string/Greeting2"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>