<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExpiryDateReminder"
    android:background="@color/App_BG_Tint">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="178dp"
        android:layout_height="78dp"
        android:scaleX="2"
        android:scaleY="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/LogoDescription" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/B4"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExSoon"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.223" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardBreakfast"
        android:layout_width="393dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="#2B3568"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="12dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/ExtextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MED1"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:textSize="20sp" />

        <TextView
        android:id="@+id/ExtextView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MED1"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
            android:drawableLeft="@drawable/ic_time"
        android:layout_marginLeft="60dp"
        android:textSize="13sp" />

        <TextView
            android:id="@+id/ExtextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/ic_time"
            android:text="@string/MED1"
            android:textColor="@color/white"
            android:textSize="13sp" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>